Code refactoring. Small design changes.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,7 +16,7 @@
         <ion-icon name="color-wand"></ion-icon>
       </button>
 
-      <button ion-fab icon-only color="royal" (click)="sendResult()">
+      <button ion-fab icon-only color="{{sendBtnColor}}" (click)="sendResult()">
         <ion-icon name="send"></ion-icon>
       </button>
 
