Beta stage. Finished with sending data to the server.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -37,7 +37,7 @@
   </div>
 
   <ion-list>
-    <ion-item ion-item *ngFor="let item of barCodeList">
+    <ion-item text-wrap ion-item *ngFor="let item of barCodeList" >
       <h2>{{item.code}}</h2>
       <p>{{item.time}}</p>
     </ion-item>
