Beta version stage 0.1

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -30,7 +30,7 @@
     <button ion-fab color="danger" (click)="scanCode()"><ion-icon name="qr-scanner"></ion-icon></button>
   </ion-fab>
 
-  <h3>[ {{nickname}} : {{gameID}} ]</h3> 
+  <h3>[ {{nickname}} ]</h3> 
 
   <div *ngIf="!barCodeList?.length" id="background-home-screen">
     <img src="assets/images/zzz.png">
